# game_box

./: .credo  .formatter.exs  .gitignore  .tool-versions  Dockerfile  README.md  fly.toml  mix.exs  tictactoe.wasm
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: push.yml
assets/: package-lock.json  package.json  tailwind.config.js
assets/css/: app.css  app.scss
assets/js/: app.js  uploader.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
games/guess-the-song/: esbuild.js  trivia.rb
games/guess-the-song/src/: data.json  extism.js  game.js  game.test.js  index.js
games/punderplay/: .gitignore  README.md  build.zig  zigmod.yml
games/punderplay-zig/: deps.zig
games/punderplay-zig/src/: game.zig  (+1 more)
games/test-game/: README.md  index.js  test-game.wasm
games/tictactoe/: Cargo.toml  README.md
games/tictactoe/src/: game.rs  lib.rs
games/tictactoe/src/templates/: app.css  app.html  board.html
games/trivia/: README.md
games/trivia-with-tests/: package-lock.json  package.json
games/war/: package.json
games/wasm-trivia/: README.md  package-lock.json  package.json
lib/: game_box.ex  game_box_web.ex
lib/game_box/: application.ex  arena.ex  game.ex  games.ex  mailer.ex  players.ex  presence.ex  release.ex  repo.ex  styleguide.ex  user.ex  users.ex
lib/game_box_web/: component_helpers.ex  endpoint.ex  gettext.ex  helpers.ex  router.ex  simple_s3_upload.ex  telemetry.ex
priv/repo/: seeds.exs
test/: test_helper.exs
test/game_box/: games_test.exs  users_test.exs
test/support/: conn_case.ex  data_case.ex  factory.ex
(+91 files in other folders)
