[package]
name = "tictactoe-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
extism-pdk = "0.1.0"
serde = "1.0.148"
serde_json = "1.0.89"
tera = { version = "1", default-features = false }
anyhow = { version = "1.0", default-features = false }

[lib]
crate_type = ["cdylib"]
